--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <p><strong>Link download app:</strong> <a href="https://github.com/Haiminh2023/docbaogrid">Tải về từ GitHub</a></p>
   <p><strong>Privacy Policy:</strong> <a href="https://haiminh2023.github.io/docbaogrid-privacy/">Xem chính sách bảo mật</a></p>
   <p><strong>Terms of Service:</strong> <a href="https://haiminh2023.github.io/docbaogrid/">Điều khoản sử dụng</a></p>
-  <p>Liên hệ: <a href="mailto:haiphuong0430@gmail.com">haiphuong0430@gmail.com</a></p>
+  <p>Liên hệ: <a href="mailto:autopocket6@gmail.com">autopocket6@gmail.com</a></p>
 </body>
 </html>
