--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <h1>Đọc online</h1>
   <p>Ứng dụng đọc báo, truyện online trên KOReader.</p>
   <p><strong>Link download app:</strong> <a href="https://github.com/Haiminh2023/docbaogrid">Tải về từ GitHub</a></p>
-  <p><strong>Privacy Policy:</strong> <a href="https://haiminh2023.github.io/docbaogrid-privacy/">Xem chính sách bảo mật</a></p>
-  <p><strong>Terms of Service:</strong> <a href="https://haiminh2023.github.io/docbaogrid/">Điều khoản sử dụng</a></p>
+  <p><strong>Privacy Policy:</strong> <a href="https://haiminh2023.github.io/privacy.html">Xem chính sách bảo mật</a></p>
+  <p><strong>Terms of Service:</strong> <a href="https://haiminh2023.github.io/terms.html">Điều khoản sử dụng</a></p>
   <p>Liên hệ: <a href="mailto:autopocket6@gmail.com">autopocket6@gmail.com</a></p>
 </body>
 </html>
