--- a/terms.html
+++ b/terms.html
@@ -1,56 +1,86 @@
-# Terms of Service – Đọc online
-**Last updated: 2025-12-05**
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <title>Terms of Service – Đọc online</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 40px auto;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        hr {
+            margin: 30px 0;
+        }
+    </style>
+</head>
+<body>
 
-Đọc online (“Koreader Plugin”) là tiện ích cho phép người dùng đăng nhập Google Drive và truy cập tệp của họ trực tiếp từ KOReader. Khi sử dụng Plugin, bạn đồng ý với các điều khoản dưới đây.
+<h1>Terms of Service – Đọc online</h1>
+<p><strong>Last updated: 2025-12-05</strong></p>
 
----
+<p>Đọc online (“Koreader Plugin”) là tiện ích cho phép người dùng đăng nhập Google Drive và truy cập tệp của họ trực tiếp từ KOReader. Khi sử dụng Plugin, bạn đồng ý với các điều khoản dưới đây.</p>
 
-## 1. Sử dụng Plugin
-Plugin chỉ cung cấp các chức năng:
-- Đăng nhập Google Drive thông qua OAuth 2.0  
-- Liệt kê và truy cập các tệp Google Drive mà bạn chọn  
-- Tải tệp về thiết bị của bạn khi bạn yêu cầu  
+<hr>
 
-Plugin **không chỉnh sửa hoặc thay đổi dữ liệu** trong tài khoản Google Drive của bạn nếu không có yêu cầu từ bạn.
+<h2>1. Sử dụng Plugin</h2>
+<p>Plugin chỉ cung cấp các chức năng:</p>
+<ul>
+    <li>Đăng nhập Google Drive thông qua OAuth 2.0</li>
+    <li>Liệt kê và truy cập các tệp Google Drive mà bạn chọn</li>
+    <li>Tải tệp về thiết bị của bạn khi bạn yêu cầu</li>
+</ul>
+<p>Plugin <strong>không chỉnh sửa hoặc thay đổi dữ liệu</strong> trong tài khoản Google Drive của bạn nếu không có yêu cầu từ bạn.</p>
 
----
+<hr>
 
-## 2. Quyền và trách nhiệm của người dùng
-- Bạn hoàn toàn chịu trách nhiệm đối với các tệp trong Google Drive của mình.  
-- Bạn có trách nhiệm đảm bảo dữ liệu của bạn được sao lưu và bảo mật.  
-- Bạn tự chịu trách nhiệm đối với mọi hoạt động xảy ra bên trong tài khoản Google Drive của bạn.
+<h2>2. Quyền và trách nhiệm của người dùng</h2>
+<ul>
+    <li>Bạn hoàn toàn chịu trách nhiệm đối với các tệp trong Google Drive của mình.</li>
+    <li>Bạn có trách nhiệm đảm bảo dữ liệu của bạn được sao lưu và bảo mật.</li>
+    <li>Bạn tự chịu trách nhiệm đối với mọi hoạt động xảy ra bên trong tài khoản Google Drive của bạn.</li>
+</ul>
 
----
+<hr>
 
-## 3. Thu thập và xử lý dữ liệu
-- Plugin **không lưu trữ dữ liệu người dùng trên bất kỳ máy chủ nào của nhà phát triển**.  
-- Access token và refresh token được lưu cục bộ trên thiết bị của bạn để duy trì đăng nhập.  
-- Plugin không gửi dữ liệu của bạn ra ngoài ngoại trừ giao tiếp trực tiếp với Google để truy cập Google Drive.
+<h2>3. Thu thập và xử lý dữ liệu</h2>
+<ul>
+    <li>Plugin <strong>không lưu trữ dữ liệu người dùng trên bất kỳ máy chủ nào của nhà phát triển</strong>.</li>
+    <li>Access token và refresh token được lưu cục bộ trên thiết bị của bạn để duy trì đăng nhập.</li>
+    <li>Plugin không gửi dữ liệu của bạn ra ngoài ngoại trừ giao tiếp trực tiếp với Google để truy cập Google Drive.</li>
+</ul>
+<p>(Chi tiết xem thêm tại Privacy Policy.)</p>
 
-(Chi tiết xem thêm tại Privacy Policy.)
+<hr>
 
----
+<h2>4. Trách nhiệm pháp lý</h2>
+<p>Nhà phát triển <strong>không chịu trách nhiệm</strong> đối với:</p>
+<ul>
+    <li>Mất mát dữ liệu trong Google Drive</li>
+    <li>Lỗi đồng bộ hoặc lỗi kết nối mạng</li>
+    <li>Hành vi sử dụng Plugin sai cách hoặc trái với chính sách của Google</li>
+</ul>
+<p>Plugin được cung cấp “như hiện có”, không có bảo đảm nào về khả năng hoạt động liên tục hoặc không lỗi.</p>
 
-## 4. Trách nhiệm pháp lý
-Nhà phát triển **không chịu trách nhiệm** đối với:
-- Mất mát dữ liệu trong Google Drive  
-- Lỗi đồng bộ hoặc lỗi kết nối mạng  
-- Hành vi sử dụng Plugin sai cách hoặc trái với chính sách của Google  
+<hr>
 
-Plugin được cung cấp “như hiện có”, không có bảo đảm nào về khả năng hoạt động liên tục hoặc không lỗi.
+<h2>5. Thu hồi quyền truy cập</h2>
+<p>Người dùng có thể thu hồi quyền truy cập của Plugin vào Google Drive bất cứ lúc nào tại:<br>
+<strong>Google Account → Security → Third-party Access</strong>.</p>
 
----
+<hr>
 
-## 5. Thu hồi quyền truy cập
-Người dùng có thể thu hồi quyền truy cập của Plugin vào Google Drive bất cứ lúc nào tại:
-Google Account → Security → Third-party Access.
+<h2>6. Liên hệ</h2>
+<p>Nếu bạn có câu hỏi về điều khoản sử dụng, vui lòng liên hệ:<br>
+<strong>autopocket6@gmail.com</strong></p>
 
----
+<hr>
 
-## 6. Liên hệ
-Nếu bạn có câu hỏi về điều khoản sử dụng, vui lòng liên hệ:
-**autopocket6@gmail.com**
+<p>Bằng cách sử dụng Plugin, bạn xác nhận rằng bạn đã đọc và đồng ý với các điều khoản trên.</p>
 
----
-
-Bằng cách sử dụng Plugin, bạn xác nhận rằng bạn đã đọc và đồng ý với các điều khoản trên.
+</body>
+</html>
