--- a/privacy.html
+++ b/privacy.html
@@ -1,47 +1,114 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Policy - Đọc online</title>
+    <title>Privacy Policy – Đọc online</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 900px;
+            margin: 40px auto;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        ul {
+            margin-left: 20px;
+        }
+        hr {
+            margin: 30px 0;
+        }
+    </style>
 </head>
 <body>
-    <h1>Privacy Policy</h1>
-    <p><strong>Last updated: 2025-12-05</strong></p>
 
-    <p>Đọc online là một plugin chạy trên KOReader cho phép người dùng đăng nhập Google Drive thông qua giao thức OAuth 2.0. Chính sách bảo mật này mô tả cách plugin thu thập và xử lý dữ liệu.</p>
+<h1>Privacy Policy – Đọc online</h1>
+<p><strong>Last updated: 2025-12-05</strong></p>
 
-    <h2>1. Dữ liệu được thu thập</h2>
-    <p>Plugin chỉ thu thập và sử dụng những dữ liệu tối thiểu cần thiết để hoạt động:</p>
-    <ul>
-        <li>Thông tin tài khoản Google cơ bản (ví dụ: email) để xác thực.</li>
-        <li>Danh sách file Google Drive của người dùng khi họ yêu cầu truy cập.</li>
-        <li>Access token và refresh token — được cấp bởi Google OAuth để duy trì phiên đăng nhập.</li>
-    </ul>
+<p>
+Đọc online (“the Plugin”) is a KOReader plugin that allows users to access
+their Google Drive files through Google OAuth 2.0 authentication.
+This Privacy Policy explains how Google user data is accessed, used,
+protected, and handled.
+</p>
 
-    <h2>2. Mục đích sử dụng dữ liệu</h2>
-    <p>Dữ liệu chỉ được dùng cho các mục đích sau:</p>
-    <ul>
-        <li>Cho phép người dùng đăng nhập vào Google Drive.</li>
-        <li>Liệt kê và tải file mà người dùng chọn.</li>
-        <li>Duy trì trạng thái đăng nhập thông qua token OAuth 2.0.</li>
-    </ul>
+<hr>
 
-    <h2>3. Lưu trữ và bảo mật dữ liệu</h2>
-    <ul>
-        <li>Access token và refresh token <strong>chỉ được lưu cục bộ</strong> trên thiết bị chạy KOReader của người dùng.</li>
-        <li>Plugin <strong>không gửi bất kỳ dữ liệu nào</strong> đến máy chủ của nhà phát triển.</li>
-        <li>Mọi kết nối với Google đều diễn ra trực tiếp giữa thiết bị người dùng và Google theo chuẩn bảo mật OAuth 2.0.</li>
-    </ul>
+<h2>1. Data We Access</h2>
+<p>The Plugin only accesses the minimum data required for its functionality, including:</p>
+<ul>
+    <li>Basic Google account information (such as email address) for authentication purposes.</li>
+    <li>Google Drive file metadata and file content when explicitly requested by the user.</li>
+    <li>OAuth 2.0 access tokens and refresh tokens provided by Google.</li>
+</ul>
 
-    <h2>4. Quyền của người dùng</h2>
-    <ul>
-        <li>Người dùng có thể thu hồi quyền truy cập bất cứ lúc nào tại Google Account → Security → Third-party Access.</li>
-        <li>Người dùng có thể xóa token bằng cách đăng xuất trong plugin.</li>
-    </ul>
+<hr>
 
-    <h2>5. Liên hệ</h2>
-    <p>Nếu bạn có câu hỏi về chính sách bảo mật này, vui lòng liên hệ:</p>
-    <p>Email: <a href="mailto:autopocket6@gmail.com">autopocket6@gmail.com</a></p>
+<h2>2. Purpose of Data Usage</h2>
+<p>Google user data is used solely to:</p>
+<ul>
+    <li>Authenticate users via Google OAuth 2.0.</li>
+    <li>Display the list of Google Drive files selected by the user.</li>
+    <li>Download files to the user’s device upon user request.</li>
+    <li>Maintain login sessions using OAuth tokens.</li>
+</ul>
+
+<p>The Plugin does not modify, delete, or upload data to Google Drive.</p>
+
+<hr>
+
+<h2>3. Data Storage and Security</h2>
+<ul>
+    <li>OAuth access tokens and refresh tokens are stored <strong>locally on the user’s device</strong> running KOReader.</li>
+    <li>The Plugin <strong>does not store or process Google user data on any developer-owned servers</strong>.</li>
+    <li>All communications with Google services are conducted over <strong>HTTPS</strong> and comply with OAuth 2.0 security standards.</li>
+    <li>Google user data is protected using <strong>industry-standard security measures</strong>, including encryption in transit and restricted access.</li>
+</ul>
+
+<hr>
+
+<h2>4. Data Sharing and Disclosure</h2>
+<ul>
+    <li>The Plugin <strong>does not sell, rent, or share</strong> Google user data with any third parties.</li>
+    <li>Google user data is used exclusively to provide the Plugin’s core features.</li>
+    <li>Data may only be disclosed if required by applicable laws, regulations, or legal requests.</li>
+</ul>
+
+<hr>
+
+<h2>5. Data Retention and Deletion</h2>
+<ul>
+    <li>Google user data is retained only for as long as necessary to provide the requested service.</li>
+    <li>Users can delete all locally stored tokens by logging out of the Plugin.</li>
+    <li>When access is revoked or the user logs out, all OAuth tokens are permanently removed from the device.</li>
+</ul>
+
+<hr>
+
+<h2>6. User Control and Rights</h2>
+<ul>
+    <li>Users can revoke the Plugin’s access at any time via:
+        <br><strong>Google Account → Security → Third-party access</strong>.
+    </li>
+    <li>Users have full control over which files are accessed by the Plugin.</li>
+</ul>
+
+<hr>
+
+<h2>7. Contact Information</h2>
+<p>
+If you have any questions or concerns regarding this Privacy Policy, please contact:
+</p>
+<p>
+<strong>Email:</strong> <a href="mailto:autopocket6@gmail.com">autopocket6@gmail.com</a>
+</p>
+
+<hr>
+
+<p>
+By using the Plugin, you acknowledge that you have read and understood this Privacy Policy.
+</p>
 
 </body>
 </html>
