--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <title>Privacy Policy – Đọc online</title>
@@ -19,86 +19,142 @@
         hr {
             margin: 30px 0;
         }
+        .en {
+            color: #555;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
 
-<h1>Privacy Policy – Đọc online</h1>
+<h1>Chính sách bảo mật / Privacy Policy – Đọc online</h1>
 <p><strong>Last updated: 2025-12-05</strong></p>
 
 <p>
-Đọc online (“the Plugin”) is a KOReader plugin that allows users to access
-their Google Drive files through Google OAuth 2.0 authentication.
-This Privacy Policy explains how Google user data is accessed, used,
-protected, and handled.
+<strong>Đọc online</strong> (“Plugin”) là một tiện ích chạy trên KOReader,
+cho phép người dùng truy cập Google Drive thông qua giao thức xác thực
+Google OAuth 2.0.
+</p>
+<p class="en">
+<strong>Đọc online</strong> (“the Plugin”) is a KOReader plugin that allows users
+to access their Google Drive through Google OAuth 2.0 authentication.
 </p>
 
 <hr>
 
-<h2>1. Data We Access</h2>
-<p>The Plugin only accesses the minimum data required for its functionality, including:</p>
+<h2>1. Dữ liệu được thu thập / Data We Access</h2>
+<p>
+Plugin chỉ truy cập những dữ liệu tối thiểu cần thiết để hoạt động:
+</p>
+<p class="en">
+The Plugin only accesses the minimum data required for its functionality:
+</p>
 <ul>
-    <li>Basic Google account information (such as email address) for authentication purposes.</li>
-    <li>Google Drive file metadata and file content when explicitly requested by the user.</li>
-    <li>OAuth 2.0 access tokens and refresh tokens provided by Google.</li>
+    <li>Thông tin tài khoản Google cơ bản (ví dụ: địa chỉ email) để xác thực.</li>
+    <li class="en">Basic Google account information (such as email address) for authentication.</li>
+
+    <li>Danh sách tệp và nội dung tệp Google Drive khi người dùng yêu cầu.</li>
+    <li class="en">Google Drive file metadata and file content when explicitly requested by the user.</li>
+
+    <li>Access token và refresh token được Google cấp thông qua OAuth 2.0.</li>
+    <li class="en">OAuth 2.0 access tokens and refresh tokens provided by Google.</li>
 </ul>
 
 <hr>
 
-<h2>2. Purpose of Data Usage</h2>
-<p>Google user data is used solely to:</p>
+<h2>2. Mục đích sử dụng dữ liệu / Purpose of Data Usage</h2>
+<p>Dữ liệu Google của người dùng chỉ được sử dụng để:</p>
+<p class="en">Google user data is used solely to:</p>
 <ul>
-    <li>Authenticate users via Google OAuth 2.0.</li>
-    <li>Display the list of Google Drive files selected by the user.</li>
-    <li>Download files to the user’s device upon user request.</li>
-    <li>Maintain login sessions using OAuth tokens.</li>
+    <li>Cho phép người dùng đăng nhập Google Drive.</li>
+    <li class="en">Authenticate users via Google OAuth 2.0.</li>
+
+    <li>Hiển thị danh sách tệp Google Drive theo yêu cầu của người dùng.</li>
+    <li class="en">Display Google Drive files selected by the user.</li>
+
+    <li>Tải tệp về thiết bị khi người dùng yêu cầu.</li>
+    <li class="en">Download files to the user’s device upon request.</li>
+
+    <li>Duy trì trạng thái đăng nhập bằng token OAuth.</li>
+    <li class="en">Maintain login sessions using OAuth tokens.</li>
 </ul>
 
-<p>The Plugin does not modify, delete, or upload data to Google Drive.</p>
+<p>
+Plugin không chỉnh sửa, xóa hoặc tải dữ liệu lên Google Drive của người dùng.
+</p>
+<p class="en">
+The Plugin does not modify, delete, or upload any Google Drive data.
+</p>
 
 <hr>
 
-<h2>3. Data Storage and Security</h2>
+<h2>3. Lưu trữ và bảo mật dữ liệu / Data Storage and Security</h2>
 <ul>
-    <li>OAuth access tokens and refresh tokens are stored <strong>locally on the user’s device</strong> running KOReader.</li>
-    <li>The Plugin <strong>does not store or process Google user data on any developer-owned servers</strong>.</li>
-    <li>All communications with Google services are conducted over <strong>HTTPS</strong> and comply with OAuth 2.0 security standards.</li>
-    <li>Google user data is protected using <strong>industry-standard security measures</strong>, including encryption in transit and restricted access.</li>
+    <li>Access token và refresh token <strong>chỉ được lưu cục bộ</strong> trên thiết bị chạy KOReader.</li>
+    <li class="en">OAuth access tokens and refresh tokens are stored <strong>locally on the user’s device</strong> running KOReader.</li>
+
+    <li>Plugin <strong>không lưu trữ hoặc xử lý dữ liệu người dùng</strong> trên bất kỳ máy chủ nào của nhà phát triển.</li>
+    <li class="en">The Plugin <strong>does not store or process Google user data on developer-owned servers</strong>.</li>
+
+    <li>Mọi kết nối với Google đều sử dụng giao thức <strong>HTTPS</strong> và tuân thủ chuẩn OAuth 2.0.</li>
+    <li class="en">All communications with Google services are conducted over <strong>HTTPS</strong> and comply with OAuth 2.0 security standards.</li>
+
+    <li>Dữ liệu nhạy cảm được bảo vệ bằng các biện pháp bảo mật tiêu chuẩn ngành.</li>
+    <li class="en">Sensitive data is protected using <strong>industry-standard security measures</strong>.</li>
 </ul>
 
 <hr>
 
-<h2>4. Data Sharing and Disclosure</h2>
+<h2>4. Chia sẻ và tiết lộ dữ liệu / Data Sharing and Disclosure</h2>
 <ul>
-    <li>The Plugin <strong>does not sell, rent, or share</strong> Google user data with any third parties.</li>
-    <li>Google user data is used exclusively to provide the Plugin’s core features.</li>
-    <li>Data may only be disclosed if required by applicable laws, regulations, or legal requests.</li>
+    <li>Plugin <strong>không bán, cho thuê hoặc chia sẻ</strong> dữ liệu Google của người dùng cho bất kỳ bên thứ ba nào.</li>
+    <li class="en">The Plugin <strong>does not sell, rent, or share</strong> Google user data with any third parties.</li>
+
+    <li>Dữ liệu Google chỉ được sử dụng để cung cấp chức năng cốt lõi của Plugin.</li>
+    <li class="en">Google user data is used exclusively to provide the Plugin’s core features.</li>
+
+    <li>Dữ liệu chỉ được tiết lộ nếu có yêu cầu hợp pháp từ cơ quan có thẩm quyền.</li>
+    <li class="en">Data may only be disclosed if required by applicable laws or legal requests.</li>
 </ul>
 
 <hr>
 
-<h2>5. Data Retention and Deletion</h2>
+<h2>5. Thời gian lưu trữ và xóa dữ liệu / Data Retention and Deletion</h2>
 <ul>
-    <li>Google user data is retained only for as long as necessary to provide the requested service.</li>
-    <li>Users can delete all locally stored tokens by logging out of the Plugin.</li>
-    <li>When access is revoked or the user logs out, all OAuth tokens are permanently removed from the device.</li>
+    <li>Dữ liệu Google của người dùng chỉ được lưu trong thời gian cần thiết để cung cấp dịch vụ.</li>
+    <li class="en">Google user data is retained only as long as necessary to provide the service.</li>
+
+    <li>Người dùng có thể xóa toàn bộ token bằng cách đăng xuất trong Plugin.</li>
+    <li class="en">Users can delete all locally stored tokens by logging out of the Plugin.</li>
+
+    <li>Khi người dùng thu hồi quyền truy cập hoặc đăng xuất, toàn bộ token sẽ bị xóa vĩnh viễn.</li>
+    <li class="en">All OAuth tokens are permanently deleted when access is revoked or the user logs out.</li>
 </ul>
 
 <hr>
 
-<h2>6. User Control and Rights</h2>
+<h2>6. Quyền của người dùng / User Rights and Control</h2>
 <ul>
-    <li>Users can revoke the Plugin’s access at any time via:
+    <li>Người dùng có thể thu hồi quyền truy cập của Plugin bất kỳ lúc nào tại:
         <br><strong>Google Account → Security → Third-party access</strong>.
     </li>
-    <li>Users have full control over which files are accessed by the Plugin.</li>
+    <li class="en">
+        Users can revoke the Plugin’s access at any time via:
+        <br><strong>Google Account → Security → Third-party access</strong>.
+    </li>
+
+    <li>Người dùng toàn quyền kiểm soát các tệp được truy cập.</li>
+    <li class="en">Users have full control over which files are accessed.</li>
 </ul>
 
 <hr>
 
-<h2>7. Contact Information</h2>
+<h2>7. Liên hệ / Contact Information</h2>
 <p>
-If you have any questions or concerns regarding this Privacy Policy, please contact:
+Nếu bạn có bất kỳ câu hỏi nào liên quan đến chính sách bảo mật này, vui lòng liên hệ:
+</p>
+<p class="en">
+If you have any questions regarding this Privacy Policy, please contact:
 </p>
 <p>
 <strong>Email:</strong> <a href="mailto:autopocket6@gmail.com">autopocket6@gmail.com</a>
@@ -107,6 +163,9 @@ If you have any questions or concerns regarding this Privacy Policy, please cont
 <hr>
 
 <p>
+Bằng việc sử dụng Plugin, bạn xác nhận rằng bạn đã đọc và đồng ý với Chính sách bảo mật này.
+</p>
+<p class="en">
 By using the Plugin, you acknowledge that you have read and understood this Privacy Policy.
 </p>
 
