--- a/privacy.html
+++ b/privacy.html
@@ -32,17 +32,17 @@
 
 <p>
 <strong>Đọc online</strong> (“Plugin”) là một tiện ích chạy trên KOReader,
-cho phép người dùng truy cập Google Drive thông qua giao thức xác thực
-Google OAuth 2.0.
+cho phép người dùng truy cập tệp Google Drive của họ thông qua giao thức
+xác thực Google OAuth 2.0.
 </p>
 <p class="en">
 <strong>Đọc online</strong> (“the Plugin”) is a KOReader plugin that allows users
-to access their Google Drive through Google OAuth 2.0 authentication.
+to access their Google Drive files through Google OAuth 2.0 authentication.
 </p>
 
 <hr>
 
-<h2>1. Dữ liệu được thu thập / Data We Access</h2>
+<h2>1. Dữ liệu được truy cập / Data We Access</h2>
 <p>
 Plugin chỉ truy cập những dữ liệu tối thiểu cần thiết để hoạt động:
 </p>
@@ -53,8 +53,8 @@ The Plugin only accesses the minimum data required for its functionality:
     <li>Thông tin tài khoản Google cơ bản (ví dụ: địa chỉ email) để xác thực.</li>
     <li class="en">Basic Google account information (such as email address) for authentication.</li>
 
-    <li>Danh sách tệp và nội dung tệp Google Drive khi người dùng yêu cầu.</li>
-    <li class="en">Google Drive file metadata and file content when explicitly requested by the user.</li>
+    <li>Danh sách tệp và nội dung tệp Google Drive khi người dùng chủ động chọn.</li>
+    <li class="en">Google Drive file metadata and file content explicitly selected by the user.</li>
 
     <li>Access token và refresh token được Google cấp thông qua OAuth 2.0.</li>
     <li class="en">OAuth 2.0 access tokens and refresh tokens provided by Google.</li>
@@ -66,76 +66,137 @@ The Plugin only accesses the minimum data required for its functionality:
 <p>Dữ liệu Google của người dùng chỉ được sử dụng để:</p>
 <p class="en">Google user data is used solely to:</p>
 <ul>
-    <li>Cho phép người dùng đăng nhập Google Drive.</li>
+    <li>Xác thực đăng nhập Google Drive thông qua OAuth 2.0.</li>
     <li class="en">Authenticate users via Google OAuth 2.0.</li>
 
-    <li>Hiển thị danh sách tệp Google Drive theo yêu cầu của người dùng.</li>
-    <li class="en">Display Google Drive files selected by the user.</li>
+    <li>Hiển thị và mở các tệp Google Drive do người dùng lựa chọn.</li>
+    <li class="en">Display and open Google Drive files selected by the user.</li>
 
-    <li>Tải tệp về thiết bị khi người dùng yêu cầu.</li>
+    <li>Tải tệp về thiết bị của người dùng khi có yêu cầu.</li>
     <li class="en">Download files to the user’s device upon request.</li>
-
-    <li>Duy trì trạng thái đăng nhập bằng token OAuth.</li>
-    <li class="en">Maintain login sessions using OAuth tokens.</li>
 </ul>
 
 <p>
-Plugin không chỉnh sửa, xóa hoặc tải dữ liệu lên Google Drive của người dùng.
+Plugin <strong>không chỉnh sửa, không xóa, không tải lên</strong> bất kỳ dữ liệu nào
+trong Google Drive của người dùng.
 </p>
 <p class="en">
-The Plugin does not modify, delete, or upload any Google Drive data.
+The Plugin <strong>does not upload, modify, or delete</strong> any Google Drive data.
 </p>
 
 <hr>
 
 <h2>3. Lưu trữ và bảo mật dữ liệu / Data Storage and Security</h2>
 <ul>
-    <li>Access token và refresh token <strong>chỉ được lưu cục bộ</strong> trên thiết bị chạy KOReader.</li>
-    <li class="en">OAuth access tokens and refresh tokens are stored <strong>locally on the user’s device</strong> running KOReader.</li>
+    <li>
+        Trong quá trình xác thực OAuth 2.0, access token và refresh token
+        <strong>có thể được xử lý tạm thời thông qua một máy chủ trung gian</strong>
+        nhằm hoàn tất quá trình đăng nhập.
+    </li>
+    <li class="en">
+        During the OAuth 2.0 authentication flow, access tokens and refresh tokens
+        may be temporarily processed through an intermediate server
+        solely to complete the login process.
+    </li>
 
-    <li>Plugin <strong>không lưu trữ hoặc xử lý dữ liệu người dùng</strong> trên bất kỳ máy chủ nào của nhà phát triển.</li>
-    <li class="en">The Plugin <strong>does not store or process Google user data on developer-owned servers</strong>.</li>
+    <li>
+        Token chỉ được lưu trữ trong thời gian rất ngắn
+        (<strong>tối đa 2 phút</strong>) và sẽ <strong>tự động bị xóa</strong>
+        ngay sau khi quá trình xác thực hoàn tất.
+    </li>
+    <li class="en">
+        Tokens are stored for a very short duration
+        (<strong>maximum of 2 minutes</strong>) and are automatically deleted
+        after authentication is completed.
+    </li>
 
-    <li>Mọi kết nối với Google đều sử dụng giao thức <strong>HTTPS</strong> và tuân thủ chuẩn OAuth 2.0.</li>
-    <li class="en">All communications with Google services are conducted over <strong>HTTPS</strong> and comply with OAuth 2.0 security standards.</li>
+    <li>
+        Sau khi đăng nhập thành công, token được lưu <strong>cục bộ trên thiết bị người dùng</strong>
+        chạy KOReader.
+    </li>
+    <li class="en">
+        After successful authentication, tokens are stored <strong>locally on the user’s device</strong>
+        running KOReader.
+    </li>
 
-    <li>Dữ liệu nhạy cảm được bảo vệ bằng các biện pháp bảo mật tiêu chuẩn ngành.</li>
-    <li class="en">Sensitive data is protected using <strong>industry-standard security measures</strong>.</li>
+    <li>
+        Không có dữ liệu Google nào được lưu trữ lâu dài trên máy chủ của nhà phát triển.
+    </li>
+    <li class="en">
+        No Google user data is stored long-term on developer-owned servers.
+    </li>
+
+    <li>
+        Mọi kết nối đều sử dụng giao thức <strong>HTTPS</strong> và các biện pháp
+        bảo mật tiêu chuẩn ngành.
+    </li>
+    <li class="en">
+        All communications use <strong>HTTPS</strong> and industry-standard security measures.
+    </li>
 </ul>
 
 <hr>
 
 <h2>4. Chia sẻ và tiết lộ dữ liệu / Data Sharing and Disclosure</h2>
 <ul>
-    <li>Plugin <strong>không bán, cho thuê hoặc chia sẻ</strong> dữ liệu Google của người dùng cho bất kỳ bên thứ ba nào.</li>
-    <li class="en">The Plugin <strong>does not sell, rent, or share</strong> Google user data with any third parties.</li>
+    <li>
+        Plugin <strong>không bán, không cho thuê, không chia sẻ</strong>
+        dữ liệu Google của người dùng cho bất kỳ bên thứ ba nào.
+    </li>
+    <li class="en">
+        The Plugin <strong>does not sell, rent, or share</strong>
+        Google user data with any third parties.
+    </li>
 
-    <li>Dữ liệu Google chỉ được sử dụng để cung cấp chức năng cốt lõi của Plugin.</li>
-    <li class="en">Google user data is used exclusively to provide the Plugin’s core features.</li>
+    <li>
+        Dữ liệu Google chỉ được sử dụng để cung cấp chức năng cốt lõi của Plugin.
+    </li>
+    <li class="en">
+        Google user data is used exclusively to provide the Plugin’s core functionality.
+    </li>
 
-    <li>Dữ liệu chỉ được tiết lộ nếu có yêu cầu hợp pháp từ cơ quan có thẩm quyền.</li>
-    <li class="en">Data may only be disclosed if required by applicable laws or legal requests.</li>
+    <li>
+        Dữ liệu chỉ có thể được tiết lộ nếu có yêu cầu hợp pháp theo quy định của pháp luật.
+    </li>
+    <li class="en">
+        Data may only be disclosed if required by applicable laws or legal requests.
+    </li>
 </ul>
 
 <hr>
 
 <h2>5. Thời gian lưu trữ và xóa dữ liệu / Data Retention and Deletion</h2>
 <ul>
-    <li>Dữ liệu Google của người dùng chỉ được lưu trong thời gian cần thiết để cung cấp dịch vụ.</li>
-    <li class="en">Google user data is retained only as long as necessary to provide the service.</li>
+    <li>
+        Dữ liệu Google của người dùng chỉ được lưu trữ trong thời gian cần thiết
+        để cung cấp dịch vụ.
+    </li>
+    <li class="en">
+        Google user data is retained only as long as necessary to provide the service.
+    </li>
 
-    <li>Người dùng có thể xóa toàn bộ token bằng cách đăng xuất trong Plugin.</li>
-    <li class="en">Users can delete all locally stored tokens by logging out of the Plugin.</li>
+    <li>
+        Người dùng có thể xóa toàn bộ token bằng cách đăng xuất trong Plugin.
+    </li>
+    <li class="en">
+        Users can delete all locally stored tokens by logging out of the Plugin.
+    </li>
 
-    <li>Khi người dùng thu hồi quyền truy cập hoặc đăng xuất, toàn bộ token sẽ bị xóa vĩnh viễn.</li>
-    <li class="en">All OAuth tokens are permanently deleted when access is revoked or the user logs out.</li>
+    <li>
+        Khi người dùng thu hồi quyền truy cập hoặc đăng xuất,
+        toàn bộ token sẽ bị xóa vĩnh viễn.
+    </li>
+    <li class="en">
+        All OAuth tokens are permanently deleted when access is revoked or the user logs out.
+    </li>
 </ul>
 
 <hr>
 
 <h2>6. Quyền của người dùng / User Rights and Control</h2>
 <ul>
-    <li>Người dùng có thể thu hồi quyền truy cập của Plugin bất kỳ lúc nào tại:
+    <li>
+        Người dùng có thể thu hồi quyền truy cập của Plugin bất kỳ lúc nào tại:
         <br><strong>Google Account → Security → Third-party access</strong>.
     </li>
     <li class="en">
@@ -143,8 +204,12 @@ The Plugin does not modify, delete, or upload any Google Drive data.
         <br><strong>Google Account → Security → Third-party access</strong>.
     </li>
 
-    <li>Người dùng toàn quyền kiểm soát các tệp được truy cập.</li>
-    <li class="en">Users have full control over which files are accessed.</li>
+    <li>
+        Người dùng toàn quyền kiểm soát các tệp được Plugin truy cập.
+    </li>
+    <li class="en">
+        Users have full control over which files are accessed by the Plugin.
+    </li>
 </ul>
 
 <hr>
