--- a/index.html
+++ b/index.html
@@ -1,21 +1,95 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <title>Đọc online</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; }
-    h1 { color: #2c3e50; }
-    a { color: #3498db; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-  </style>
-</head>
-<body>
-  <h1>Đọc online</h1>
-  <p>Ứng dụng đọc báo, truyện online trên KOReader.</p>
-  <p><strong>Link download app:</strong> <a href="https://github.com/Haiminh2023/docbaogrid">Tải về từ GitHub</a></p>
-  <p><strong>Privacy Policy:</strong> <a href="https://haiminh2023.github.io/privacy.html">Xem chính sách bảo mật</a></p>
-  <p><strong>Terms of Service:</strong> <a href="https://haiminh2023.github.io/terms.html">Điều khoản sử dụng</a></p>
-  <p>Liên hệ: <a href="mailto:autopocket6@gmail.com">autopocket6@gmail.com</a></p>
-</body>
-</html>
+# Đọc Online – KOReader Plugin
+
+Plugin dành cho KOReader giúp đọc **báo online**, **truyện online**, và **kết nối Google Drive**.  
+Hỗ trợ mọi thiết bị: Kobo, Kindle, PocketBook, điện thoại Android.
+
+---
+
+## 1. Tính năng chính
+
+### 📰 Đọc báo online
+- Nhiều nguồn báo: chính trị, xã hội, thể thao, tài chính...
+- Thêm nhanh vào danh mục **Yêu thích**
+- **Ẩn / hiện** nguồn báo tùy ý
+- Tùy chọn **tải ảnh** hoặc chỉ đọc chữ
+
+---
+
+### 📖 Đọc truyện online
+- Tìm kiếm theo tên truyện hoặc tên + chương
+- **Đồng bộ truyện đang đọc dở** qua cloud
+- Lưu truyện đang đọc để truy cập nhanh
+- Hỗ trợ chuyển chương mượt mà
+
+---
+
+### 📚 Kho truyện & sách chia sẻ
+
+- Kho nội dung công khai gồm : truyện tranh / truyện chữ / sách
+- Phân loại theo thể loại / danh mục
+- Duyệt nội dung theo dạng thư mục
+- Tải về đọc offline trong KOReader
+- File tải xuống có thể gắn nhãn phân loại
+- Quản lý file đã tải theo nhãn (như folder)
+
+### ☁️ Kết nối Google Drive
+- Thêm **nhiều tài khoản Google** không giới hạn
+- Tìm kiếm file, truyện trực tiếp từ Google Drive
+- Tải file về máy ngay trong KOReader
+- Giảm sử dụng bộ nhớ máy (mọi thứ trên cloud)
+
+---
+
+## 2. Tải plugin
+
+### Kobo / Kindle / PocketBook / Android (32-bit)
+Tải file:
+```
+docbao.koplugin_update_pack.zip
+```
+
+### Android (64-bit)
+Tải file:
+```
+docbao.koplugin_android_update_pack.zip
+```
+
+Giải nén file thành thư mục:
+```
+docbao.koplugin
+```
+
+### Tải KOReader (Android)
+Nếu dùng Android, cần cài KOReader trước:
+
+Link tải:
+https://github.com/Haiminh2023/docbaogrid
+
+---
+
+## 3. Hướng dẫn cài đặt
+
+### Android
+Copy thư mục:
+```
+docbao.koplugin
+```
+vào:
+```
+.../koreader/plugins/
+```
+
+### Kobo / Kindle / PocketBook
+Copy thư mục:
+```
+docbao.koplugin
+```
+vào:
+```
+.add/koreader/plugins/
+```
+
+---
+
+Mọi thắc mắc vui lòng liên hệ Email
+Haiphuong0430@gmail.com
