--- a/index.html
+++ b/index.html
@@ -1,95 +1,176 @@
-# Đọc Online – KOReader Plugin
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Đọc Online – KOReader Plugin</title>
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background: #f5f6f8;
+      color: #222;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 24px;
+      background: #ffffff;
+    }
+    h1, h2, h3 {
+      color: #1a73e8;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    hr {
+      border: none;
+      border-top: 1px solid #ddd;
+      margin: 24px 0;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 6px;
+    }
+    code {
+      background: #f1f3f4;
+      padding: 4px 6px;
+      border-radius: 4px;
+      display: inline-block;
+      margin: 4px 0;
+    }
+    .box {
+      background: #f8f9fa;
+      border-left: 4px solid #1a73e8;
+      padding: 16px;
+      margin: 16px 0;
+    }
+    .download {
+      background: #e8f0fe;
+      padding: 16px;
+      border-radius: 6px;
+    }
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 14px;
+      color: #666;
+    }
+    a {
+      color: #1a73e8;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
 
-Plugin dành cho KOReader giúp đọc **báo online**, **truyện online**, và **kết nối Google Drive**.  
-Hỗ trợ mọi thiết bị: Kobo, Kindle, PocketBook, điện thoại Android.
+<div class="container">
 
----
+  <h1>📚 Đọc Online – KOReader Plugin</h1>
+  <p style="text-align:center;">
+    Plugin dành cho <strong>KOReader</strong> giúp đọc <b>báo online</b>, <b>truyện online</b> và <b>kết nối Google Drive</b>.<br>
+    Hỗ trợ mọi thiết bị: <b>Kobo, Kindle, PocketBook, Android</b>.
+  </p>
 
-## 1. Tính năng chính
+  <hr>
 
-### 📰 Đọc báo online
-- Nhiều nguồn báo: chính trị, xã hội, thể thao, tài chính...
-- Thêm nhanh vào danh mục **Yêu thích**
-- **Ẩn / hiện** nguồn báo tùy ý
-- Tùy chọn **tải ảnh** hoặc chỉ đọc chữ
+  <h2>1. Tính năng chính</h2>
 
----
+  <h3>📰 Đọc báo online</h3>
+  <ul>
+    <li>Nhiều nguồn báo: chính trị, xã hội, thể thao, tài chính...</li>
+    <li>Thêm nhanh vào danh mục <b>Yêu thích</b></li>
+    <li><b>Ẩn / hiện</b> nguồn báo tùy ý</li>
+    <li>Tùy chọn <b>tải ảnh</b> hoặc chỉ đọc chữ</li>
+  </ul>
 
-### 📖 Đọc truyện online
-- Tìm kiếm theo tên truyện hoặc tên + chương
-- **Đồng bộ truyện đang đọc dở** qua cloud
-- Lưu truyện đang đọc để truy cập nhanh
-- Hỗ trợ chuyển chương mượt mà
+  <h3>📖 Đọc truyện online</h3>
+  <ul>
+    <li>Tìm kiếm theo tên truyện hoặc tên + chương</li>
+    <li><b>Đồng bộ truyện đang đọc dở</b> qua cloud</li>
+    <li>Lưu truyện đang đọc để truy cập nhanh</li>
+    <li>Chuyển chương mượt mà, tối ưu cho màn hình e-ink</li>
+  </ul>
 
----
+  <h3>📚 Kho truyện & sách chia sẻ</h3>
+  <ul>
+    <li>Kho nội dung công khai: truyện tranh / truyện chữ / sách</li>
+    <li>Phân loại theo thể loại / danh mục</li>
+    <li>Duyệt nội dung theo dạng thư mục</li>
+    <li>Tải về đọc offline trong KOReader</li>
+    <li>File tải xuống có thể gắn nhãn phân loại</li>
+    <li>Quản lý file đã tải theo nhãn (như folder)</li>
+  </ul>
 
-### 📚 Kho truyện & sách chia sẻ
+  <h3>☁️ Kết nối Google Drive</h3>
+  <ul>
+    <li>Thêm <b>nhiều tài khoản Google</b> không giới hạn</li>
+    <li>Tìm kiếm file, truyện trực tiếp từ Google Drive</li>
+    <li>Tải file về máy ngay trong KOReader</li>
+    <li>Giảm sử dụng bộ nhớ máy (mọi thứ nằm trên cloud)</li>
+  </ul>
 
-- Kho nội dung công khai gồm : truyện tranh / truyện chữ / sách
-- Phân loại theo thể loại / danh mục
-- Duyệt nội dung theo dạng thư mục
-- Tải về đọc offline trong KOReader
-- File tải xuống có thể gắn nhãn phân loại
-- Quản lý file đã tải theo nhãn (như folder)
+  <hr>
 
-### ☁️ Kết nối Google Drive
-- Thêm **nhiều tài khoản Google** không giới hạn
-- Tìm kiếm file, truyện trực tiếp từ Google Drive
-- Tải file về máy ngay trong KOReader
-- Giảm sử dụng bộ nhớ máy (mọi thứ trên cloud)
+  <h2>2. Tải plugin</h2>
 
----
+  <div class="download">
+    <h3>Kobo / Kindle / PocketBook / Android (32-bit)</h3>
+    <code>docbao.koplugin_update_pack.zip</code>
 
-## 2. Tải plugin
+    <h3>Android (64-bit)</h3>
+    <code>docbao.koplugin_android_update_pack.zip</code>
 
-### Kobo / Kindle / PocketBook / Android (32-bit)
-Tải file:
-```
-docbao.koplugin_update_pack.zip
-```
+    <p>Sau khi tải, giải nén thành thư mục:</p>
+    <code>docbao.koplugin</code>
+  </div>
 
-### Android (64-bit)
-Tải file:
-```
-docbao.koplugin_android_update_pack.zip
-```
+  <h3>Tải KOReader (Android)</h3>
+  <p>Nếu dùng Android, cần cài KOReader trước:</p>
+  <p>
+    🔗 <a href="https://github.com/Haiminh2023/docbaogrid" target="_blank">
+      https://github.com/Haiminh2023/docbaogrid
+    </a>
+  </p>
 
-Giải nén file thành thư mục:
-```
-docbao.koplugin
-```
+  <hr>
 
-### Tải KOReader (Android)
-Nếu dùng Android, cần cài KOReader trước:
+  <h2>3. Hướng dẫn cài đặt</h2>
 
-Link tải:
-https://github.com/Haiminh2023/docbaogrid
+  <div class="box">
+    <h3>📱 Android</h3>
+    <p>Copy thư mục:</p>
+    <code>docbao.koplugin</code>
+    <p>vào:</p>
+    <code>.../koreader/plugins/</code>
+  </div>
 
----
+  <div class="box">
+    <h3>📖 Kobo / Kindle / PocketBook</h3>
+    <p>Copy thư mục:</p>
+    <code>docbao.koplugin</code>
+    <p>vào:</p>
+    <code>.add/koreader/plugins/</code>
+  </div>
 
-## 3. Hướng dẫn cài đặt
+  <footer>
+    <p>
+      Mọi thắc mắc vui lòng liên hệ Email<br>
+      <strong>
+        <a href="mailto:Haiphuong0430@gmail.com">Haiphuong0430@gmail.com</a>
+      </strong>
+    </p>
+  </footer>
 
-### Android
-Copy thư mục:
-```
-docbao.koplugin
-```
-vào:
-```
-.../koreader/plugins/
-```
+</div>
 
-### Kobo / Kindle / PocketBook
-Copy thư mục:
-```
-docbao.koplugin
-```
-vào:
-```
-.add/koreader/plugins/
-```
-
----
-
-Mọi thắc mắc vui lòng liên hệ Email
-Haiphuong0430@gmail.com
+</body>
+</html>
