--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
     <p>
       Mọi thắc mắc vui lòng liên hệ Email<br>
       <strong>
-        <a href="mailto:Haiphuong0430@gmail.com">Haiphuong0430@gmail.com</a>
+        <a href="mailto:Doc.online2026@gmail.com">Doc.online2026@gmail.com</a><br>
+        Zalo: <a href="https://zalo.me/0964359911">0964359911</a>
       </strong>
     </p>
   </footer>
