--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 
   <footer>
     <p>
-      Mọi thắc mắc vui lòng liên hệ Email<br>
+      Mọi thắc mắc vui lòng liên hệ : <br>
       <strong>
-        <a href="mailto:Doc.online2026@gmail.com">Doc.online2026@gmail.com</a><br>
+        Email: <a href="mailto:Doc.online2026@gmail.com">Doc.online2026@gmail.com</a><br>
         Zalo: <a href="https://zalo.me/0964359911">0964359911</a>
       </strong>
     </p>
