--- a/download.html
+++ b/download.html
@@ -1,1 +1,11 @@
+<nav class="nav">
+  <div class="container">
+    <a href="index.html">Trang chủ</a>
+    <a href="features.html">Tính năng</a>
+    <a href="install.html">Cài đặt</a>
+    <a href="download.html">Tải plugin</a>
+    <a href="versions.html">Phiên bản</a>
+    <a href="contact.html">Liên hệ</a>
+  </div>
+</nav>
 
