--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8">
+  <title>Liên hệ – Đọc Online</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
 <nav class="nav">
   <div class="container">
     <a href="index.html">Trang chủ</a>
@@ -9,3 +19,36 @@
   </div>
 </nav>
 
+<div class="container">
+  <h1>Liên hệ & hỗ trợ</h1>
+
+  <p>Nếu bạn gặp lỗi, có góp ý hoặc cần hỗ trợ:</p>
+
+  <div class="box">
+    <p>
+      📧 Email:
+      <a href="mailto:Doc.online2026@gmail.com">
+        Doc.online2026@gmail.com
+      </a>
+    </p>
+
+    <p>
+      💬 Zalo:
+      <a href="https://zalo.me/0964359911">
+        0964359911
+      </a>
+    </p>
+  </div>
+
+  <p>
+    Khuyến khích gửi phản hồi chi tiết kèm:
+  </p>
+  <ul>
+    <li>Thiết bị đang dùng</li>
+    <li>Phiên bản KOReader</li>
+    <li>Mô tả lỗi hoặc ảnh chụp màn hình</li>
+  </ul>
+</div>
+
+</body>
+</html>
