--- a/index.html
+++ b/index.html
@@ -1,43 +1,99 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Đọc Online – KOReader Plugin</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>Doc Online – Đọc & Học Thông Minh</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<nav class="nav">
-  <div class="container">
-    <a href="index.html">Trang chủ</a>
-    <a href="features.html">Tính năng</a>
-    <a href="install.html">Cài đặt</a>
-    <a href="download.html">Tải plugin</a>
-    <a href="versions.html">Phiên bản</a>
-    <a href="contact.html">Liên hệ</a>
-  </div>
-</nav>
+<!-- ===== HEADER ===== -->
+<header class="header">
+    <div class="container header-inner">
+        <div class="logo">Doc<span>Online</span></div>
 
-<div class="container">
-  <h1>📚 Đọc Online – KOReader Plugin</h1>
+        <nav class="nav">
+            <a href="index.html" class="active">Trang chủ</a>
+            <a href="pages/features.html">Tính năng</a>
+            <a href="pages/guide.html">Hướng dẫn</a>
+            <a href="pages/pricing.html">Gói dịch vụ</a>
+            <a href="pages/contact.html">Liên hệ</a>
+        </nav>
+    </div>
+</header>
 
-  <p>
-    Plugin dành cho <b>KOReader</b> giúp đọc <b>báo online</b>, <b>truyện online</b>
-    và <b>kết nối Google Drive</b>.
-  </p>
+<!-- ===== HERO ===== -->
+<section class="hero">
+    <div class="container hero-inner">
+        <div class="hero-text">
+            <h1>Đọc & học<br><span>đơn giản – hiệu quả</span></h1>
+            <p>
+                Nền tảng đọc tài liệu, học tập và trắc nghiệm online  
+                tối ưu cho học sinh, giáo viên và người tự học.
+            </p>
 
-  <p>
-    Hỗ trợ: <b>Kobo, Kindle, PocketBook, Android</b>
-  </p>
+            <div class="hero-actions">
+                <a href="pages/features.html" class="btn primary">Xem tính năng</a>
+                <a href="pages/guide.html" class="btn outline">Hướng dẫn sử dụng</a>
+            </div>
+        </div>
 
-  <div class="box">
-    <p>
-      👉 Xem chi tiết các tính năng tại trang
-      <a href="features.html">Tính năng</a>
-    </p>
-  </div>
-</div>
+        <div class="hero-image">
+            <img src="https://dummyimage.com/420x320/e5e7eb/111827&text=Doc+Online" alt="Doc Online">
+        </div>
+    </div>
+</section>
+
+<!-- ===== FEATURES PREVIEW ===== -->
+<section class="section">
+    <div class="container">
+        <h2 class="section-title">Bạn có thể làm gì?</h2>
+
+        <div class="feature-grid">
+            <div class="feature-card">
+                <h3>📄 Đọc tài liệu</h3>
+                <p>Đọc PDF, văn bản, nội dung học tập trực tuyến mọi lúc.</p>
+            </div>
+
+            <div class="feature-card">
+                <h3>🧠 Học & trắc nghiệm</h3>
+                <p>Luyện tập câu hỏi, ghi nhớ kiến thức hiệu quả.</p>
+            </div>
+
+            <div class="feature-card">
+                <h3>☁️ Đồng bộ dữ liệu</h3>
+                <p>Học ở bất kỳ đâu, dữ liệu luôn được lưu an toàn.</p>
+            </div>
+        </div>
+
+        <div class="center">
+            <a href="pages/features.html" class="btn outline">Xem tất cả tính năng →</a>
+        </div>
+    </div>
+</section>
+
+<!-- ===== CTA ===== -->
+<section class="cta">
+    <div class="container cta-inner">
+        <h2>Bắt đầu sử dụng Doc Online ngay hôm nay</h2>
+        <p>Không cần cài đặt, sử dụng trực tiếp trên trình duyệt</p>
+        <a href="pages/guide.html" class="btn primary">Bắt đầu ngay</a>
+    </div>
+</section>
+
+<!-- ===== FOOTER ===== -->
+<footer class="footer">
+    <div class="container footer-inner">
+        <p>© 2026 Doc Online. All rights reserved.</p>
+        <p class="small">Made with ❤️ in Vietnam</p>
+    </div>
+</footer>
 
 </body>
 </html>
