--- a/pages/features.html
+++ b/pages/features.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Tải plugin – Đọc Online</title>
+  <title>Tính năng – Đọc Online</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -20,26 +20,25 @@
 </nav>
 
 <div class="container">
-  <h1>Tải plugin</h1>
+  <h1>Tính năng</h1>
 
-  <div class="download">
-    <h3>📦 Kobo / Kindle / PocketBook / Android (32-bit)</h3>
-    <code>docbao.koplugin_update_pack.zip</code>
-    <p>(Sẽ gắn link download tại GitHub Release)</p>
+  <h3>📰 Đọc báo online</h3>
+  <ul>
+    <li>Nhiều nguồn báo</li>
+    <li>Yêu thích, ẩn / hiện nguồn</li>
+  </ul>
 
-    <h3>📦 Android (64-bit)</h3>
-    <code>docbao.koplugin_android_update_pack.zip</code>
-    <p>(Sẽ gắn link download tại GitHub Release)</p>
-  </div>
+  <h3>📖 Đọc truyện online</h3>
+  <ul>
+    <li>Tìm kiếm truyện</li>
+    <li>Nhớ chương đang đọc</li>
+  </ul>
 
-  <div class="box">
-    <h3>📌 Sau khi tải</h3>
-    <ul>
-      <li>Giải nén file zip</li>
-      <li>Thu được thư mục <code>docbao.koplugin</code></li>
-      <li>Làm theo hướng dẫn tại trang <a href="install.html">Cài đặt</a></li>
-    </ul>
-  </div>
+  <h3>☁️ Google Drive</h3>
+  <ul>
+    <li>Nhiều tài khoản</li>
+    <li>Tải file trực tiếp</li>
+  </ul>
 </div>
 
 </body>
