--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
     <title>Doc Online – Đọc & Học Thông Minh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <!-- Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<!-- ===== HEADER ===== -->
 <header class="header">
     <div class="container header-inner">
         <div class="logo">Doc<span>Online</span></div>
 
         <nav class="nav">
-            <a href="index.html" class="active">Trang chủ</a>
+            <a class="active" href="index.html">Trang chủ</a>
             <a href="pages/features.html">Tính năng</a>
             <a href="pages/guide.html">Hướng dẫn</a>
             <a href="pages/pricing.html">Gói dịch vụ</a>
@@ -28,71 +24,67 @@
     </div>
 </header>
 
-<!-- ===== HERO ===== -->
 <section class="hero">
     <div class="container hero-inner">
         <div class="hero-text">
-            <h1>Đọc & học<br><span>đơn giản – hiệu quả</span></h1>
+            <h1>
+                Đọc & học <br>
+                <span>đơn giản – hiệu quả</span>
+            </h1>
+
             <p>
                 Nền tảng đọc tài liệu, học tập và trắc nghiệm online  
                 tối ưu cho học sinh, giáo viên và người tự học.
             </p>
 
             <div class="hero-actions">
-                <a href="pages/features.html" class="btn primary">Xem tính năng</a>
-                <a href="pages/guide.html" class="btn outline">Hướng dẫn sử dụng</a>
+                <a class="btn primary" href="pages/features.html">Xem tính năng</a>
+                <a class="btn ghost" href="pages/guide.html">Hướng dẫn sử dụng</a>
             </div>
         </div>
 
         <div class="hero-image">
-            <img src="https://dummyimage.com/420x320/e5e7eb/111827&text=Doc+Online" alt="Doc Online">
+            <img src="https://dummyimage.com/480x360/e5e7eb/111827&text=Doc+Online" alt="">
         </div>
     </div>
 </section>
 
-<!-- ===== FEATURES PREVIEW ===== -->
 <section class="section">
     <div class="container">
         <h2 class="section-title">Bạn có thể làm gì?</h2>
 
         <div class="feature-grid">
             <div class="feature-card">
-                <h3>📄 Đọc tài liệu</h3>
+                <span class="icon">📄</span>
+                <h3>Đọc tài liệu</h3>
                 <p>Đọc PDF, văn bản, nội dung học tập trực tuyến mọi lúc.</p>
             </div>
 
             <div class="feature-card">
-                <h3>🧠 Học & trắc nghiệm</h3>
+                <span class="icon">🧠</span>
+                <h3>Học & trắc nghiệm</h3>
                 <p>Luyện tập câu hỏi, ghi nhớ kiến thức hiệu quả.</p>
             </div>
 
             <div class="feature-card">
-                <h3>☁️ Đồng bộ dữ liệu</h3>
-                <p>Học ở bất kỳ đâu, dữ liệu luôn được lưu an toàn.</p>
+                <span class="icon">☁️</span>
+                <h3>Đồng bộ dữ liệu</h3>
+                <p>Dữ liệu học tập được lưu an toàn trên cloud.</p>
             </div>
         </div>
-
-        <div class="center">
-            <a href="pages/features.html" class="btn outline">Xem tất cả tính năng →</a>
-        </div>
     </div>
 </section>
 
-<!-- ===== CTA ===== -->
 <section class="cta">
-    <div class="container cta-inner">
+    <div class="container">
         <h2>Bắt đầu sử dụng Doc Online ngay hôm nay</h2>
         <p>Không cần cài đặt, sử dụng trực tiếp trên trình duyệt</p>
-        <a href="pages/guide.html" class="btn primary">Bắt đầu ngay</a>
+        <a class="btn light" href="pages/guide.html">Bắt đầu ngay</a>
     </div>
 </section>
 
-<!-- ===== FOOTER ===== -->
 <footer class="footer">
-    <div class="container footer-inner">
-        <p>© 2026 Doc Online. All rights reserved.</p>
-        <p class="small">Made with ❤️ in Vietnam</p>
-    </div>
+    <p>© 2026 Doc Online</p>
 </footer>
 
 </body>
