--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+<header class="topbar">
+    <div class="topbar-inner">
+        <div class="logo">
+            Doc<span>Online</span>
+        </div>
+
+        <nav class="top-nav">
+            <a href="index.html" class="active">Trang chủ</a>
+            <a href="pages/features.html">Tính năng</a>
+            <a href="pages/guide.html">Hướng dẫn</a>
+            <a href="pages/pricing.html">Gói dịch vụ</a>
+            <a href="pages/contact.html">Liên hệ</a>
+        </nav>
+    </div>
+</header>
 
 <header class="header">
     <div class="container header-inner">
