--- a/index.html
+++ b/index.html
@@ -4,32 +4,15 @@
     <meta charset="UTF-8">
     <title>Doc Online – Đọc & Học Thông Minh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+
 <header class="topbar">
     <div class="topbar-inner">
-        <div class="logo">
-            Doc<span>Online</span>
-        </div>
-
-        <nav class="top-nav">
-            <a href="index.html" class="active">Trang chủ</a>
-            <a href="pages/features.html">Tính năng</a>
-            <a href="pages/guide.html">Hướng dẫn</a>
-            <a href="pages/pricing.html">Gói dịch vụ</a>
-            <a href="pages/contact.html">Liên hệ</a>
-        </nav>
-    </div>
-</header>
-
-<header class="header">
-    <div class="container header-inner">
         <div class="logo">Doc<span>Online</span></div>
-
-        <nav class="nav">
+        <nav class="top-nav">
             <a class="active" href="index.html">Trang chủ</a>
             <a href="pages/features.html">Tính năng</a>
             <a href="pages/guide.html">Hướng dẫn</a>
@@ -42,24 +25,17 @@
 <section class="hero">
     <div class="container hero-inner">
         <div class="hero-text">
-            <h1>
-                Đọc & học <br>
-                <span>đơn giản – hiệu quả</span>
-            </h1>
-
-            <p>
-                Nền tảng đọc tài liệu, học tập và trắc nghiệm online  
-                tối ưu cho học sinh, giáo viên và người tự học.
-            </p>
+            <h1>Đọc & học<br><span>đơn giản – hiệu quả</span></h1>
+            <p>Nền tảng đọc tài liệu, học tập và trắc nghiệm online.</p>
 
             <div class="hero-actions">
                 <a class="btn primary" href="pages/features.html">Xem tính năng</a>
-                <a class="btn ghost" href="pages/guide.html">Hướng dẫn sử dụng</a>
+                <a class="btn ghost" href="pages/guide.html">Hướng dẫn</a>
             </div>
         </div>
 
         <div class="hero-image">
-            <img src="https://dummyimage.com/480x360/e5e7eb/111827&text=Doc+Online" alt="">
+            <img src="https://dummyimage.com/500x360/e5e7eb/111827&text=Doc+Online">
         </div>
     </div>
 </section>
@@ -70,36 +46,28 @@
 
         <div class="feature-grid">
             <div class="feature-card">
-                <span class="icon">📄</span>
+                <div class="icon">📄</div>
                 <h3>Đọc tài liệu</h3>
-                <p>Đọc PDF, văn bản, nội dung học tập trực tuyến mọi lúc.</p>
+                <p>PDF, văn bản, tài liệu học tập online.</p>
             </div>
 
             <div class="feature-card">
-                <span class="icon">🧠</span>
+                <div class="icon">🧠</div>
                 <h3>Học & trắc nghiệm</h3>
-                <p>Luyện tập câu hỏi, ghi nhớ kiến thức hiệu quả.</p>
+                <p>Luyện tập, ghi nhớ kiến thức hiệu quả.</p>
             </div>
 
             <div class="feature-card">
-                <span class="icon">☁️</span>
-                <h3>Đồng bộ dữ liệu</h3>
-                <p>Dữ liệu học tập được lưu an toàn trên cloud.</p>
+                <div class="icon">☁️</div>
+                <h3>Đồng bộ</h3>
+                <p>Dữ liệu luôn được lưu an toàn.</p>
             </div>
         </div>
     </div>
 </section>
 
-<section class="cta">
-    <div class="container">
-        <h2>Bắt đầu sử dụng Doc Online ngay hôm nay</h2>
-        <p>Không cần cài đặt, sử dụng trực tiếp trên trình duyệt</p>
-        <a class="btn light" href="pages/guide.html">Bắt đầu ngay</a>
-    </div>
-</section>
-
 <footer class="footer">
-    <p>© 2026 Doc Online</p>
+    © 2026 Doc Online
 </footer>
 
 </body>
