--- a/pages/features.html
+++ b/pages/features.html
@@ -1,45 +1,34 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Tính năng – Đọc Online</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>Tính năng – Doc Online</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-<nav class="nav">
-  <div class="container">
-    <a href="index.html">Trang chủ</a>
-    <a href="features.html">Tính năng</a>
-    <a href="install.html">Cài đặt</a>
-    <a href="download.html">Tải plugin</a>
-    <a href="versions.html">Phiên bản</a>
-    <a href="contact.html">Liên hệ</a>
-  </div>
-</nav>
+<header class="topbar">
+    <div class="topbar-inner">
+        <div class="logo">Doc<span>Online</span></div>
+        <nav class="top-nav">
+            <a href="../index.html">Trang chủ</a>
+            <a class="active" href="features.html">Tính năng</a>
+            <a href="guide.html">Hướng dẫn</a>
+            <a href="pricing.html">Gói dịch vụ</a>
+            <a href="contact.html">Liên hệ</a>
+        </nav>
+    </div>
+</header>
 
-<div class="container">
-  <h1>Tính năng</h1>
+<section class="page-header">
+    <h1>Tính năng</h1>
+</section>
 
-  <h3>📰 Đọc báo online</h3>
-  <ul>
-    <li>Nhiều nguồn báo</li>
-    <li>Yêu thích, ẩn / hiện nguồn</li>
-  </ul>
+<section class="section container">
+    <p>Danh sách tính năng chi tiết của Doc Online.</p>
+</section>
 
-  <h3>📖 Đọc truyện online</h3>
-  <ul>
-    <li>Tìm kiếm truyện</li>
-    <li>Nhớ chương đang đọc</li>
-  </ul>
-
-  <h3>☁️ Google Drive</h3>
-  <ul>
-    <li>Nhiều tài khoản</li>
-    <li>Tải file trực tiếp</li>
-  </ul>
-</div>
-
+<footer class="footer">© 2026 Doc Online</footer>
 </body>
 </html>
