--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,54 +1,34 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Liên hệ – Đọc Online</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>Liên hệ – Doc Online</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-<nav class="nav">
-  <div class="container">
-    <a href="index.html">Trang chủ</a>
-    <a href="features.html">Tính năng</a>
-    <a href="install.html">Cài đặt</a>
-    <a href="download.html">Tải plugin</a>
-    <a href="versions.html">Phiên bản</a>
-    <a href="contact.html">Liên hệ</a>
-  </div>
-</nav>
+<header class="topbar">
+    <div class="topbar-inner">
+        <div class="logo">Doc<span>Online</span></div>
+        <nav class="top-nav">
+            <a href="../index.html">Trang chủ</a>
+            <a href="features.html">Tính năng</a>
+            <a href="guide.html">Hướng dẫn</a>
+            <a href="pricing.html">Gói dịch vụ</a>
+            <a class="active" href="contact.html">Liên hệ</a>
+        </nav>
+    </div>
+</header>
 
-<div class="container">
-  <h1>Liên hệ & hỗ trợ</h1>
+<section class="page-header">
+    <h1>Liên hệ</h1>
+</section>
 
-  <p>Nếu bạn gặp lỗi, có góp ý hoặc cần hỗ trợ:</p>
+<section class="section container">
+    <p>Email: Doc.online2026@gmail.com</p>
+</section>
 
-  <div class="box">
-    <p>
-      📧 Email:
-      <a href="mailto:Doc.online2026@gmail.com">
-        Doc.online2026@gmail.com
-      </a>
-    </p>
-
-    <p>
-      💬 Zalo:
-      <a href="https://zalo.me/0964359911">
-        0964359911
-      </a>
-    </p>
-  </div>
-
-  <p>
-    Khuyến khích gửi phản hồi chi tiết kèm:
-  </p>
-  <ul>
-    <li>Thiết bị đang dùng</li>
-    <li>Phiên bản KOReader</li>
-    <li>Mô tả lỗi hoặc ảnh chụp màn hình</li>
-  </ul>
-</div>
-
+<footer class="footer">© 2026 Doc Online</footer>
 </body>
 </html>
